infra/gitea/custom-resources/ingress_route_tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitea-ssh-route
  namespace: gitea
spec:
  entryPoints:
    - gitea-ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: gitea-ssh
          port: 2222
